<resources>
    <string name="app_name">Ordinary Coffee House</string>
    <string name="user_full_name">Huynh Tan Nhat Hao</string>
    <integer name="loyal_cup">4</integer>
    <string name="phone_number">+9312345678</string>
    <string name="email">htnhao21@apcs.fitus.edu.vn</string>
    <string name="address">123 Nguyen Dinh Chieu, Phuong 14, Quan Tan Binh, Thanh Pho Ho Chi Minh</string>
    <string name="myPoints">2750</string>
    <string name="good_morning">Good morning</string>
    <string name="go_to_cart">Go to Cart</string>
    <string name="go_to_profile">Go to Profile</string>
    <string name="loyalty_card">Loyalty card</string>
    <string name="_0_8">0 / 8</string>
    <string name="des_image_cup_1">Image cup 1</string>
    <string name="des_image_cup_2">Image cup 2</string>
    <string name="des_image_cup_3">Image cup 3</string>
    <string name="des_image_cup_4">Image cup 4</string>
    <string name="des_image_cup_5">Image cup 5</string>
    <string name="des_image_cup_6">Image cup 6</string>
    <string name="des_image_cup_7">Image cup 7</string>
    <string name="des_image_cup_8">Image cup 8</string>
    <string name="choose_your_coffee">Choose your coffee</string>
    <string name="drink_1_image">Drink 1 image</string>
    <string name="drink_2_image">Drink 2 image</string>
    <string name="drink_3_image">Drink 3 image</string>
    <string name="drink_4_image">Drink 4 image</string>
    <string name="americano">Americano</string>
    <string name="cappuccino">Cappuccino</string>
    <string name="mocha">Mocha</string>
    <string name="flat_white">Flat White</string>
    <string name="des_home_button">Home Button</string>
    <string name="des_rewards_button">Rewards Button</string>
    <string name="des_my_order_button">My Order Button</string>
    <string name="buy">Buy</string>
    <string name="des_drink_image">Drink image description</string>
    <string name="total_amount">$3.0</string>
    <string name="total_amount_text">Total amount</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="large_ice">Large ice</string>
    <string name="medium_ice">Medium ice</string>
    <string name="little_ice">Little ice</string>
    <string name="ice">Ice</string>
    <string name="size_xl">Size XL</string>
    <string name="size_l">Size L</string>
    <string name="size_m">Size m</string>
    <string name="size">Size</string>
    <string name="ice_select_icon">Ice select icon</string>
    <string name="hot_select_icon">Hot select icon</string>
    <string name="select">Select</string>
    <string name="double_option">Double</string>
    <string name="single_option">Single</string>
    <string name="shot">Shot</string>
    <string name="plus_icon">Plus icon</string>
    <string name="_1">1</string>
    <string name="minus">Minus</string>
    <string name="details">Details</string>
    <string name="back_to_home_icon">Back to Home Icon</string>
    <string name="my_cart">My Cart</string>
    <string name="_3_0">$3.0</string>
    <string name="_9_0">$9.0</string>
    <string name="checkout">Checkout</string>
    <string name="my_order">My Order</string>
    <string name="on_going">On going</string>
    <string name="history">History</string>
    <string name="your_order_has_been_placed_successfully">Your order has been placed successfully</string>
    <string name="order_success">Order success</string>
    <string name="for_more_details_go_to_my_orders">For more details, go to my orders</string>
    <string name="track_my_order">Track my order</string>
    <string name="order_successfully">Order successfully</string>
    <string name="profile">Profile</string>
    <string name="full_name">Full name</string>
    <string name="edit_name_icon">Edit Name icon</string>
    <string name="phone">Phone</string>
    <string name="edit_phone_icon">Edit Phone icon</string>
    <string name="email_text">Email</string>
    <string name="edit_email_icon">Edit Email icon</string>
    <string name="address_text">Address</string>
    <string name="edit_address_icon">Edit Address icon</string>
    <string name="edit_name_image">Edit name image</string>
    <string name="edit_phone_image">Edit phone image</string>
    <string name="edit_email_image">Edit email image</string>
    <string name="edit_address_image">Edit address image</string>
    <string name="redeem">Redeem</string>
    <string name="rewards">Rewards</string>
    <string name="my_points">My Points</string>
    <string name="redeem_drinks">Redeem drinks</string>
    <string name="history_rewards">History Rewards</string>
    <string name="scroll_view_for_cart">Scroll view for cart</string>
    <string name="redeem_list">Redeem list</string>
    <string name="_1340pts">1340pts</string>
    <string name="valid_until_04_07_23">Valid until 04.07.23</string>
    <string name="scroll_view_for_history">Scroll view for history</string>
    <string name="_12pts">+ 12Pts</string>
    <string name="drinks_history_for_ongoing_and_received">Drinks History for ongoing and received</string>
    <integer name="myPoints">2750</integer>
</resources>