<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RewardActivity">

    <TextView
        android:id="@+id/reward_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rewards"
        android:layout_marginTop="50sp"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:textColor="@color/strong_blue"
        android:fontFamily="@font/poppins_medium"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/loyalCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_below="@id/reward_header"
        android:layout_marginTop="25sp"
        android:layout_marginLeft="25sp"
        android:layout_marginRight="25sp"
        android:background="@drawable/layout_border_1"
        android:onClick="actionCheckCup"
        android:paddingBottom="15dp">

        <LinearLayout
            android:id="@+id/loyalCard_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/loyalCard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="15dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="25dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="19"
                android:text="@string/loyalty_card"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/loyal_cup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_0_8"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            android:background="@drawable/loyal_card_border"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingLeft="11dp"
            android:paddingRight="11dp">

            <ImageView
                android:id="@+id/loyal_cup_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/cup_off"
                android:layout_weight="1"
                android:contentDescription="@string/des_image_cup_1"/>

            <ImageView
                android:id="@+id/loyal_cup_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/cup_off"
                android:layout_weight="1"
                android:contentDescription="@string/des_image_cup_2"/>

            <ImageView
                android:id="@+id/loyal_cup_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/cup_off"
                android:layout_weight="1"
                android:contentDescription="@string/des_image_cup_3"/>

            <ImageView
                android:id="@+id/loyal_cup_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/cup_off"
                android:layout_weight="1"
                android:contentDescription="@string/des_image_cup_4"/>

            <ImageView
                android:id="@+id/loyal_cup_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/cup_off"
                android:layout_weight="1"
                android:contentDescription="@string/des_image_cup_5"/>

            <ImageView
                android:id="@+id/loyal_cup_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/cup_off"
                android:layout_weight="1"
                android:contentDescription="@string/des_image_cup_6"/>

            <ImageView
                android:id="@+id/loyal_cup_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/cup_off"
                android:layout_weight="1"
                android:contentDescription="@string/des_image_cup_7"/>

            <ImageView
                android:id="@+id/loyal_cup_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/cup_off"
                android:layout_weight="1"
                android:contentDescription="@string/des_image_cup_8"/>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/redeem_menu"
        android:layout_width="match_parent"
        android:layout_height="90sp"
        android:layout_below="@id/loyalCard"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginTop="16sp"
        android:layout_marginLeft="25sp"
        android:layout_marginRight="25sp"
        android:paddingBottom="15dp"
        android:background="@drawable/layout_border_1"
        android:paddingTop="15dp"
        android:paddingStart="30dp"
        android:paddingEnd="25dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/my_points"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/user_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:text="@string/myPoints"
                android:textSize="24sp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/white"/>


        <Button
            android:id="@+id/redeem_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:backgroundTint="@color/redeem_button"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/redeem_drinks"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:onClick="actionGoToRedeem"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/redeem_menu"
        android:layout_marginTop="31sp"
        android:layout_marginStart="31sp"
        android:layout_marginEnd="31sp">

        <TextView
            android:id="@+id/string_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history_rewards"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/strong_blue"/>

<!--        <androidx.recyclerview.widget.RecyclerView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_below="@id/string_history"-->
<!--            android:layout_marginTop="20sp">-->



<!--        </androidx.recyclerview.widget.RecyclerView>-->

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/string_history"
            android:contentDescription="@string/scroll_view_for_history">

            <LinearLayout
                android:id="@+id/linear_layout_history_reward"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:text="@string/americano"
                        android:textSize="16sp"
                        android:fontFamily="@font/poppins_medium"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:text="@string/_12pts"
                        android:textSize="20sp"
                        android:fontFamily="@font/poppins_medium"/>

                </RelativeLayout>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_navigator"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15sp"
        android:layout_marginLeft="26sp"
        android:layout_marginRight="26sp"
        android:background="@drawable/navigator_border"
        app:menu="@menu/bottom_menu"
        app:itemIconSize="30sp"
        app:itemIconTint="@drawable/item_selector"/>

</RelativeLayout>