<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical">

    <ImageView
        android:id="@+id/drink_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="20sp"
        android:scaleX="0.75"
        android:scaleY="0.75"
        android:src="@drawable/americano"
        android:contentDescription="@string/drink_1_image"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="110sp"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/drink_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/americano"
            android:textSize="14sp"
            android:textColor="@color/faded_blue"
            android:fontFamily="@font/poppins_medium"/>

        <TextView
            android:id="@+id/drink_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Single | iced | medium | full ice"
            android:textSize="12sp"
            android:textColor="@color/drink_description"
            android:fontFamily="@font/poppins_medium"/>

        <TextView
            android:id="@+id/drink_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="X 1"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_medium"/>

    </LinearLayout>

    <TextView
        android:id="@+id/drink_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/_3_0"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

</RelativeLayout>