<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/item_relative_layout"
    android:onClick="checkToHistory"
    android:paddingTop="10sp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="80sp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/cup_on"
                android:layout_margin="5sp"/>

            <TextView
                android:id="@+id/item_name_on_going"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/americano"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_medium"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/location"
                android:layout_margin="10sp"/>

            <TextView
                android:id="@+id/item_address_on_going"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:lines="1"
                android:textSize="12sp"
                android:fontFamily="@font/poppins_medium"/>

        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/item_total_price_on_going"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="@string/_3_0"
        android:textSize="24sp"
        android:fontFamily="@font/poppins_medium"/>

</RelativeLayout>